<resources>
    <string name="app_name">MoviBus</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="meus_favoritos">Meus Favoritos</string>
    <string name="linhas_favoritas">Linhas Favoritas</string>
    <string name="pontos_favoritos">Pontos Favoritos</string>
    <string name="configurações">Configurações</string>
    <string name="configurações_conta">Configurações da Conta</string>
    <string name="cadastrar_conta">Cadastrar Conta</string>



    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_favoritos">Favoritos</string>

    <string name="google_direction_api">AIzaSyCBZZtxUVCbX4fx2oKmmT07v-OcVKtnhUM</string>
    <string name="title_activity_teste">Map</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_configuracao">Configurações</string>

    <string name="key_notificacoes">key_notificacoes</string>
    <string name="key_localizacao_gps">key_localizacao_gps</string>
    <string name="nome">Nome</string>
    <string name="pesquisar_">Pesquisar linhas, pontos, itinerários</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="confirma_nova_senha">Confirma a nova senha</string>
    <string name="nova_senha">Nova senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">salvar</string>
    <string name="tire_foto_ou_escolha_galeria">Escolha uma imagem ou tire uma foto</string>
    <string name="sim">Sim</string>
    <string name="ocorreu_um_erro">Ocorreu um erro, tente novamente</string>
    <string name="campo_invalido">Campo inválido</string>
    <string name="trocar_senha">Trocar senha</string>
    <string name="cancelar_troca_de_senha">Cancelar</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="senha_invalida">Senha inválida</string>
    <string name="senha_nao_confere">Senhas não conferem</string>
    <string name="dados_atualizados">Dados atualizados</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="desativar_conta">DESATIVAR CONTA</string>
    <string name="acordo_cadastro">Ao clicar em Cadastrar eu estou de acordo com os</string>
    <string name="logar">Logar</string>
    <string name="criar_nova_conta">Criar Nova Conta</string>
    <string name="nome_do_usuario">Nome do Usuario</string>
    <string name="usuario_email_com">usuario@email.com</string>
</resources>
