<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.activity.ConfiguracoesContaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/backgroud_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:onClick="onClick">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/view_click"
                    android:src="@color/colorPrimary" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_perfil"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/view_click"
                    android:src="@drawable/baseline_account_circle_white_48dp" />

            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <EditText
                    android:id="@+id/edt_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/edt_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefone"
                    android:inputType="date"
                    app:mask="(##)#####-####" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/btn_trocar_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/view_click"
                android:onClick="onClick"
                android:text="@string/trocar_senha" />

            <LinearLayout
                android:id="@+id/linear_trocar_senha"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                    <EditText
                        android:id="@+id/edt_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                    <EditText
                        android:id="@+id/edt_nova_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nova_senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                    <EditText
                        android:id="@+id/edt_confirma_nova_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirma_nova_senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_desativar"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/desativar_conta" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_round_cancelar"
            android:textColor="@color/cinza"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/salvar"
            android:background="@drawable/button_round_blue"
            android:textColor="@color/branco"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>