<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    tools:context=".ui.activity.ConfiguracoesContaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/backgroud_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/view_click"
                    android:onClick="onClick"
                    android:src="@color/cinza" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_perfil"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/view_click"
                    android:onClick="onClick"
                    android:src="@drawable/baseline_account_circle_white_48dp" />
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <EditText
                    android:id="@+id/edt_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/edt_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:ems="10"
                    android:hint="@string/telefone"
                    android:inputType="date"
                    app:mask="(##)#####-####" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/btn_trocar_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/view_click"
                android:onClick="onClick"
                android:text="@string/trocar_senha" />

            <LinearLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/linear_trocar_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                    <EditText
                        android:id="@+id/edt_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                    <EditText
                        android:id="@+id/edt_nova_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nova_senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                    <EditText
                        android:id="@+id/edt_confirma_nova_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirma_nova_senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_desativar"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="DESATIVAR CONTA" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/button_round_cancelar"
            android:onClick="onClick"
            android:text="@string/cancelar"
            android:textColor="@color/cinza" />

        <Button
            android:enabled="false"
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_round_blue"
            android:onClick="onClick"
            android:text="@string/salvar"
            android:textColor="@color/branco" />

    </LinearLayout>
</LinearLayout>