<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.CadastroActivity">

    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="36dp"
        android:text="MoviBus"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

            <EditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/edt_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefone"
                android:inputType="date"
                app:mask="(##)#####-####" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

            <EditText
                android:id="@+id/edt_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

            <EditText
                android:id="@+id/edt_confirma_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ou cadastre-se usando:"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_google_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="singInGoogle">

            </com.google.android.gms.common.SignInButton>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonLogar"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cadastrar"
        android:onClick="cadastrarNovaConta"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Ao clicar em Cadastrar eu estou de acordo com os"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="termos de uso"
        android:layout_marginBottom="12dp"
        android:textColor="@color/azul"/>

</LinearLayout>